# SSRT-Onboard-Software

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  GNSStest.cpp  README.md  install-paho.sh  launch-program.sh
CameraFeed/: CameraFeedServer.py  README.md  app_min.py  betterFeed.py  cameraDisplay.py  install.sh
Docker_Mqtt/: README.md  mqtt_pub  mqtt_pub.cpp  test_pub  test_pub.cpp
Docker_Mqtt/extras/: mqtt_pub  mqtt_pub.cpp
Docker_Mqtt/files/: config.json
DummyCameraApp/: Main.qml
DummyCameraAppServer/: OpenCVServer.py  README.md
DummyGNSS/: gnss.cpp  gnss.py
EasyProfile/: CMakeLists.txt
EasyProfile/cmake/: CMakeLists.txt
GeigerCounter/: README.md  read-uart-linux  read-uart-linux.cpp  read-uart-windows.cpp  ssrt_geiger_prototype.ino
GeigerCounter/ssrt_geiger_prototype/: ssrt_geiger_prototype.ino
GeigerCounter/ssrt_geiger_prototype/geiger_in/: geiger_in.ino
IMUDataParse/: IMU.dev  IMU.layout  IMUDataParse.cpp  Makefile.win
MQTTServer/: CMakeLists.txt  Makefile  config.env  mqtt-server.cpp  publisher  publisher.cpp
MQTTServer/dependencies/: IMUDataParse.cpp  test
MQTTServer/dependencies/EasyProfile/: BasicTypes.h  CMakeLists.txt  EasyObjectDictionary.cpp  EasyObjectDictionary.h  EasyProfile.cpp  EasyProfile.h  EasyProtocol.cpp  EasyProtocol.h  EasyQueue.h  LibraryVersion.txt
MQTTServer/dependencies/EasyProfile/cmake/: EasyProfileConfig.cmake.in
MQTTServer/dependencies/seriallib/: serialib.cpp  serialib.h
MQTTServer/include/: mqtt_client.hpp  runtime_flags.hpp  utils.hpp
MQTTServer/include/sensors/: gnss.hpp  imu.hpp  sensor_base.hpp  temperature.hpp
MQTTServer/src/: main.cpp  mqtt_client.cpp  utils.cpp
MQTTServer/src/sensors/: gnss.cpp  imu.cpp  sensor_base.cpp  temperature.cpp
Old/DummyCameraApp/: CMakeLists.txt  README.md  main.cpp
Paho-Sensor-Hub/: CMakeLists.txt
Paho-Sensor-Hub/driver/: processor.cpp
Paho-Sensor-Hub/sensor/: CMakeLists.txt  README.md  geiger-counter.hpp  geiger-counterV2  geiger-counterV2.cpp  geiger_counter.cpp  hydrogen_ozone_sensors  hydrogen_ozone_sensors.cpp  hydrogen_ozone_sensors_DANI.cpp  hydrogen_ozone_sensorsv2.cpp  sensor_B.cpp  sensors  sensors.hpp  setup.sh
Paho-Sensor-Hub/sensor/IMUDataParse/: IMU.dev  IMU.layout  IMUDataParse.cpp  IMUDataParse.hpp  Makefile.win
Paho-Sensor-Hub/sensor/IMUDataParse/EasyProfile/: ._EasyObjectDictionary.h  BasicTypes.h  EasyObjectDictionary.cpp  EasyObjectDictionary.h  EasyProfile.cpp  EasyProfile.h  EasyProtocol.cpp  LibraryVersion.txt
Scripts/: startup.sh
Sensors/: GpsRecieverSetup.md  defaultgpsdconf  empty.txt  read-arduino_mega_linux.cpp  read_arduino_mega_windows.cpp
Sensors/Docker/Docker_Mqtt/: README.md
Sensors/Docker/Docker_Mqtt/mosquitto/config/: mosquitto.conf
Sensors/Examples/GeneralSensorPub/: CMakeLists.txt  README.md  build.sh  setup_mqtt.sh
Sensors/Examples/GeneralSensorPub/src/: main.cpp
Sensors/Udp/MqttUdp/server/: explanation.txt
Sensors/Udp/MqttUdp/server/client/: client.cpp
Sensors/Udp/MqttUdp/server/driver/: driver.cpp  lidar_data.txt
Sensors/arduino_mega_sensor_read/: arduino_mega_sensor_read.ino
docker_mqtt/: README.md  cheese.txt  docker-compose.yaml  encoded_file.txt  example-sub.py  readme.md
serialib-master/: CMakeLists.txt
serialib-master/cmake/: CMakeLists.txt  serialibConfig.cmake.in
server/client/: client
server/driver/: driver
server/server/: server  server.cpp
